--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="theme-color" content="#0078d4">
 
   <!-- Apple PWA Icons -->
-  <link rel="apple-touch-icon" sizes="1024x1024" href="icon_1024x1024.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="icon_180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="icon_167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="icon_152x152.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="icon_120x120.png">
+  <link rel="apple-touch-icon" sizes="1024x1024" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="apple-touch-icon-167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120.png">
 
   <style>
     :root {
