--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#0078d4">
 
-  <!-- Apple PWA Icons -->
-  <link rel="apple-touch-icon" sizes="1024x1024" href="apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="apple-touch-icon-167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120.png">
+  <!-- iOS Homescreen Icons -->
+  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon-152.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon-167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180.png">
 
   <style>
     :root {
