Add meta tags for Apple mobile web app support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#0078d4">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Arbeitszeit">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
   <!-- iOS Homescreen Icons -->
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120.png">
