Add manifest link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Arbeitszeit‑Rechner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="manifest" href="/manifest.json">
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#0078d4">
 
