--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- iOS Homescreen Icon: WICHTIG Reihenfolge -->
-<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180.png">
-<link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon-167.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon-152.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120.png">
-<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon-180.png">
+<link rel="apple-touch-icon" sizes="167x167" href="./icons/apple-touch-icon-167.png">
+<link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120.png">
+<link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
 
   <style>
     :root {
