--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="#0078d4">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Arbeitszeit">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
