Update title to 'Arbeitszeit-Rechner ZES'

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 <body>
   <div class="box">
-    <h2>Arbeitszeit-Rechner</h2>
+    <h2>Arbeitszeit-Rechner ZES</h2>
 
     <div class="row">
       <div class="form-group">
