Update manifest link path to root directory

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-title" content="Arbeitszeit">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- iOS Homescreen Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon-180.png">
