--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <link rel="manifest" href="./manifest.json">
+  <link rel="icon" href="./favicon.ico">
 
   <!-- iOS Homescreen Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon-180.png">
