Clean up comments and update heading in index.html
Removed unnecessary comments and updated heading.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
 
   <style>
-    /* ===============================
-       Punkt 1: iOS / PWA Text-Scaling
-       =============================== */
+
     html { -webkit-text-size-adjust: 100%; }
 
     :root {
@@ -82,9 +80,6 @@
       margin-bottom: 16px;
     }
 
-    /* ===============================
-       Punkt 2 + 3: Labels & Spacing
-       =============================== */
     .form-group {
       display: flex;
       flex-direction: column;
@@ -179,7 +174,7 @@
 
 <body>
   <div class="box">
-    <h2>Arbeitszeit-Rechner ZES</h2>
+    <h2>Arbeitszeit-Rechner</h2>
 
     <div class="row">
       <div class="form-group">
